# Reywen-TXC

./: .gitignore  Cargo.toml  README.md
.fleet/: run.json
.github/workflows/: apisec-scan.yml
.old/auto/: deploy-from-gz.sh  deploy.sh  save.sh
.old/auto/podman/: mongo.sh
.old/config/: e6.json
.old/plugins/: message.rs  mod.rs  pluralkit-old.rs  shell.rs  tomo.rs
auto/: buildah-latest.sh  clean.sh  deploy-from-gz.sh  deploy.sh  export-to-server.sh  save.sh
automation/: create-reywen.sh  deploy-mongo.sh  deploy-pod.sh  deploy-reywen.sh  devel-mongo.sh  down.sh  redo.sh  up.sh
config/: bridge.json  mongo.json  plural.json  shell.json  tomo.json
example-config/: plugin_global.json  reywen.json
src/: common.rs  lib.rs  main.rs
src/plugins/: bridge.rs  e6.rs  federolt.rs  message.rs  mod.rs  plural.rs  shell.rs  tomo.rs
src/plugins/pluralkit/: data.rs  db.rs  mod.rs  process.rs
