[package]
name = "reywen-txc"
version = "0.1.15"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# plugin dependencies
mongodb = "2.3.1"
bson = "2.5.0"
urlencoding = "2.1.2"

# async
futures-util = "0.3.25"
tokio = { version = "1.24.1", features = ["full"] }

# serde
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
toml = "0.7.5"

# self maintained libraries
#easymongo = "0.1.1"
reywen = "0.1.15"
#reywen_http = { version = "0.1.13", features = ["serde"] }

